# ml_ops_testing

./: README.md  data.dvc  file_uploader.py  pyproject.toml  test.ipynb  testfile.txt
.dvc/: config
dvclive/: metrics.json
dvclive/plots/metrics/train/: accuracy.tsv  loss.tsv
dvclive/plots/metrics/val/: accuracy.tsv  loss.tsv
