[tool.poetry]
name = "ml-ops-testing"
version = "0.1.0"
description = ""
authors = ["FarraenElysia <farraen.mohd-azmin@wae.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvc = {extras = ["gdrive"], version = "^3.59.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
