[tool.poetry]
name = "ml-ops-testing"
version = "0.1.0"
description = ""
authors = ["FarraenElysia <farraen.mohd-azmin@wae.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvc = {extras = ["gdrive"], version = "^3.59.1"}
pyopenssl = "^25.0.0"
dvc-gdrive = "^3.0.1"
minio = "^7.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
